tests/testcases/invalid/semantic/28_return_type_mismatch.ciel
// Error: return type mismatch
int get_number() {
    return true;  // Error: returning bool, but function expects int
}

int main() {
    int x = get_number();
    return 0;
}
